proper spacing within main; fix h1 hidden when small viewport height

--- a/style.css
+++ b/style.css
@@ -15,29 +15,47 @@ main {
 
     width: 40rem;
     height: 30rem;
+    border-radius: 1rem;
 
-    display: flex;
-    justify-content: center;
+    box-sizing: border-box;
 }
 
-main div {
-    width: 80%;
+main > div {
+    width: 60%;
+    height: 70%;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform:translate(-50%,-50%);
+
     display: flex;
     flex-flow: column nowrap;
-    justify-content: center;
+    justify-content: space-between;
 }
 
 h1 {
     font-size: 2rem;
+    margin: 0;
 }
 
 label {
-    font-size: 1rem;
-    display: block;
+    height: 2rem;
+    display: flex;
+    align-items: flex-end;
+    font-size: 1.2rem;
 }
 
-input {
+input, button {
     display: block;
+    box-sizing: border-box;
+    width: 100%;
+    border-radius: .2rem;
+    border: none;
 
-    width: 80%;
+    font-size: 1rem;
+    padding: 1em 2em;
+}
+
+button {
+    margin-top: 1.5em;
 }
